--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.6.0",
     "express": "^4.17.1",
     "react-router-dom": "^5.1.2"
   }
